2010-05-22 yalovoy <yalovoy@gmail.com>
	* fixes #1463 Always show branch rule set name with action "Branch"
	affected files: RuleSetView.cpp, RuleSetViewDelegate.cpp, RuleSetViewDelegate.h
	* fixes #1469 some actions should always display argument, even when text labels for actions and directions is off
	affected files: RuleSetViewDelegate.cpp

2010-05-21  vadim  <vadim@vk.crocodile.org>

	* RuleOptionsDialog.cpp (RuleOptionsDialog::loadFWObject):
	fixes #1467: "rule options dialog shows iptables parameters for
	procurve_acl"

	* FWObjectPropertiesFactory.cpp (FWObjectPropertiesFactory::getPolicyRuleOptions):
	fixes #1457 "tooltips for rule options seem to be broken". Tooltip
	always includes the line telling of the rule is "stateful" or
	"stateless", the function almost never returns empty string now.
	Added missing hashlimit parameters to the rule options
	tooltip. Some of the more rarely used hashlimit parameters are
	still not included in the tooltip. Improved tooltip formatting
	using html table.

2010-05-20  vadim  <vadim@vk.crocodile.org>

	* ProjectPanel.cpp (ProjectPanel::addRule): fixed #1461 Need
	obvious button to add new rule to the empty rule set

	* instDialog.cpp (instDialog::show): fixed #1462 "if you do a bulk
	install, and then want to do a single install, bulk mode is
	selected"

	* ActionsDialog.cpp (ActionsDialog::setRule): fixed #1464
	SourceForge bug 3004274: "Branch rule set object displays
	improperly".  Branch rule set attribute was not loaded properly
	into Branch action dialog for rules of PF firewalls.

2010-05-17  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_iosacl_writers.cpp (PrintRule::_printRule):
	restored function of the "comment the code" in the "Script
	options" of the firewall settings dialog for Cisco IOS ACL and
	ProCurve ACL. When this checkbox is off, comments are not
	added to generated script.

	* RuleSetViewDelegate.cpp (RuleSetViewDelegate::paintOptions):